plugins {
    id "com.android.application"
    id "kotlin-kapt"
    id "com.google.dagger.hilt.android"
    id "org.jetbrains.kotlin.android"
}

android {
    namespace "sk.a3soft.kit.public_demoapp"
    compileSdk 33

    defaultConfig {
        applicationId "sk.a3soft.kit.public_demoapp"
        minSdk 21
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
        }
    }

    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    kotlinOptions {
        jvmTarget = "11"
    }

    buildFeatures {
        compose true
    }

    composeOptions {
        kotlinCompilerExtensionVersion "1.4.0"
    }

    packagingOptions {
        resources {
            excludes += "/META-INF/{AL2.0,LGPL2.1}"
        }
    }
}

dependencies {

    // FiskalPRO
    implementation "sk.a3soft.kit.provider.native-protocol:client:2.4.0"

    // Desugar
    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.3"

    // Hilt
    implementation "com.google.dagger:hilt-android:2.45"
    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
    kapt "com.google.dagger:hilt-compiler:2.45"

    // Compose and others
    def composeBom = platform("androidx.compose:compose-bom:2023.03.00")
    implementation composeBom
    androidTestImplementation composeBom

    implementation "androidx.compose.material3:material3"
    implementation "androidx.compose.ui:ui-tooling-preview"
    debugImplementation "androidx.compose.ui:ui-tooling"

    implementation "androidx.activity:activity-compose:1.7.1"
    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
    implementation "androidx.navigation:navigation-compose:2.5.3"

    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"

    implementation "com.google.accompanist:accompanist-permissions:0.30.1"

    testImplementation "junit:junit:4.13.2"
    androidTestImplementation "androidx.test.ext:junit:1.1.5"
    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
}

// Allow references to generated code
kapt {
    correctErrorTypes true
}